src/test/resources/frontendReference/invalid/semanticErr/while/truErr.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:8 -- Variable tru is not defined in this scope
